unpackaged/main/default/objects/Single_Barrel_Trip_Limit_Setting__mdt/Single_Barrel_Trip_Limit_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used in the Single Barrel Calendar Component to determine the number of trips allowed per day and per time period.  Currently only supports AM and PM time periods options.</description>
    <label>Single Barrel Trip Limit Setting</label>
    <pluralLabel>Single Barrel Trip Limit Settings</pluralLabel>
</CustomObject>