unpackaged/main/default/objects/Single_Barrel_Trip_Limit_Setting__mdt/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <label>AM</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>