unpackaged/main/default/objects/Single_Barrel_Trip_Limit_Setting__mdt/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <label>PM</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>